// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ignores non-bare Observable JavaScript dynamic imports 1`] = `
{
  "autodisplay": true,
  "automutable": false,
  "autoview": false,
  "body": "function(){return(
import("./local.js")
)}",
  "databases": Set {},
  "files": Set {},
  "inputs": [],
  "output": undefined,
  "secrets": Set {},
}
`;

exports[`ignores non-bare Observable JavaScript dynamic imports 2`] = `
{
  "autodisplay": true,
  "automutable": false,
  "autoview": false,
  "body": "function(){return(
import("../sibling.js")
)}",
  "databases": Set {},
  "files": Set {},
  "inputs": [],
  "output": undefined,
  "secrets": Set {},
}
`;

exports[`ignores non-bare Observable JavaScript dynamic imports 3`] = `
{
  "autodisplay": true,
  "automutable": false,
  "autoview": false,
  "body": "function(){return(
import("/abs.js")
)}",
  "databases": Set {},
  "files": Set {},
  "inputs": [],
  "output": undefined,
  "secrets": Set {},
}
`;

exports[`ignores non-bare Observable JavaScript dynamic imports 4`] = `
{
  "autodisplay": true,
  "automutable": false,
  "autoview": false,
  "body": "function(){return(
import("https://cdn.skypack.dev/canvas-confetti")
)}",
  "databases": Set {},
  "files": Set {},
  "inputs": [],
  "output": undefined,
  "secrets": Set {},
}
`;

exports[`ignores non-bare Observable JavaScript dynamic imports 5`] = `
{
  "autodisplay": true,
  "automutable": false,
  "autoview": false,
  "body": "function(){return(
import("npm:d3")
)}",
  "databases": Set {},
  "files": Set {},
  "inputs": [],
  "output": undefined,
  "secrets": Set {},
}
`;

exports[`transpiles JavaScript expressions 1`] = `
{
  "autodisplay": true,
  "body": "() => {
return (
1 + 2
)
}",
  "databases": Set {},
  "files": Set {},
  "inputs": [],
  "output": undefined,
  "outputs": [],
  "secrets": Set {},
}
`;

exports[`transpiles JavaScript expressions 2`] = `
{
  "autodisplay": true,
  "body": "(x,y) => {
return (
x + y
)
}",
  "databases": Set {},
  "files": Set {},
  "inputs": [
    "x",
    "y",
  ],
  "output": undefined,
  "outputs": [],
  "secrets": Set {},
}
`;

exports[`transpiles JavaScript expressions 3`] = `
{
  "autodisplay": true,
  "body": "async (z) => {
return (
await z
)
}",
  "databases": Set {},
  "files": Set {},
  "inputs": [
    "z",
  ],
  "output": undefined,
  "outputs": [],
  "secrets": Set {},
}
`;

exports[`transpiles JavaScript expressions 4`] = `
{
  "autodisplay": false,
  "body": "(display) => {
return (
display(1), display(2)
)
}",
  "databases": Set {},
  "files": Set {},
  "inputs": [
    "display",
  ],
  "output": undefined,
  "outputs": [],
  "secrets": Set {},
}
`;

exports[`transpiles JavaScript programs 1`] = `
{
  "autodisplay": false,
  "body": "() => {
const x = 1, y = 2;
return {x,y};
}",
  "databases": Set {},
  "files": Set {},
  "inputs": [],
  "output": undefined,
  "outputs": [
    "x",
    "y",
  ],
  "secrets": Set {},
}
`;

exports[`transpiles JavaScript programs 2`] = `
{
  "autodisplay": false,
  "body": "(x,y) => {
x + y;
}",
  "databases": Set {},
  "files": Set {},
  "inputs": [
    "x",
    "y",
  ],
  "output": undefined,
  "outputs": [],
  "secrets": Set {},
}
`;

exports[`transpiles JavaScript programs 3`] = `
{
  "autodisplay": false,
  "body": "async (z) => {
await z;
}",
  "databases": Set {},
  "files": Set {},
  "inputs": [
    "z",
  ],
  "output": undefined,
  "outputs": [],
  "secrets": Set {},
}
`;

exports[`transpiles Observable JavaScript dynamic imports 1`] = `
{
  "autodisplay": true,
  "automutable": false,
  "autoview": false,
  "body": "function(){return(
import("https://cdn.jsdelivr.net/npm/d3/+esm")
)}",
  "databases": Set {},
  "files": Set {},
  "inputs": [],
  "output": undefined,
  "secrets": Set {},
}
`;

exports[`transpiles Observable JavaScript dynamic imports 2`] = `
{
  "autodisplay": true,
  "automutable": false,
  "autoview": false,
  "body": "function(){return(
import("https://cdn.jsdelivr.net/npm/d3@7/+esm")
)}",
  "databases": Set {},
  "files": Set {},
  "inputs": [],
  "output": undefined,
  "secrets": Set {},
}
`;

exports[`transpiles Observable JavaScript dynamic imports 3`] = `
{
  "autodisplay": true,
  "automutable": false,
  "autoview": false,
  "body": "function(){return(
import("https://cdn.jsdelivr.net/npm/@observablehq/plot/+esm")
)}",
  "databases": Set {},
  "files": Set {},
  "inputs": [],
  "output": undefined,
  "secrets": Set {},
}
`;

exports[`transpiles Observable JavaScript dynamic imports 4`] = `
{
  "autodisplay": true,
  "automutable": false,
  "autoview": false,
  "body": "function(){return(
import("https://cdn.jsdelivr.net/npm/lodash/fp/+esm")
)}",
  "databases": Set {},
  "files": Set {},
  "inputs": [],
  "output": undefined,
  "secrets": Set {},
}
`;

exports[`transpiles Observable JavaScript dynamic imports 5`] = `
{
  "autodisplay": true,
  "automutable": false,
  "autoview": false,
  "body": "function(){return(
import("https://cdn.jsdelivr.net/npm/three@0.150.1/examples/jsm/controls/OrbitControls.js/+esm")
)}",
  "databases": Set {},
  "files": Set {},
  "inputs": [],
  "output": undefined,
  "secrets": Set {},
}
`;

exports[`transpiles Observable JavaScript dynamic imports 6`] = `
{
  "autodisplay": true,
  "automutable": false,
  "autoview": false,
  "body": "function(){return(
import("https://cdn.jsdelivr.net/npm/leaflet/dist/leaflet.css")
)}",
  "databases": Set {},
  "files": Set {},
  "inputs": [],
  "output": undefined,
  "secrets": Set {},
}
`;

exports[`transpiles Observable JavaScript import-withs 1`] = `
{
  "autodisplay": false,
  "body": "async (__variable) => {
const {color} = await (import("https://api.observablehq.com/d/2d6bf7be248d66f3.js?v=4&resolutions=0000000000000000@0").then((_) => {
  const module = __variable._module._runtime.module(_.default).derive([], __variable._module);
  const outputs = new Map(Array.from(__variable._outputs, (v) => [v._name, v]));
  outputs.get("color")?.import("color", module);
  return {};
}));

return {color};
}",
  "databases": Set {},
  "files": Set {},
  "inputs": [
    "@variable",
  ],
  "output": undefined,
  "outputs": [
    "color",
  ],
  "secrets": Set {},
}
`;

exports[`transpiles Observable JavaScript import-withs 2`] = `
{
  "autodisplay": false,
  "body": "async (__variable) => {
const {color} = await (import("https://api.observablehq.com/d/2d6bf7be248d66f3.js?v=4&resolutions=0000000000000000@0").then((_) => {
  const module = __variable._module._runtime.module(_.default).derive(["foo"], __variable._module);
  const outputs = new Map(Array.from(__variable._outputs, (v) => [v._name, v]));
  outputs.get("color")?.import("color", module);
  return {};
}));

return {color};
}",
  "databases": Set {},
  "files": Set {},
  "inputs": [
    "@variable",
  ],
  "output": undefined,
  "outputs": [
    "color",
  ],
  "secrets": Set {},
}
`;

exports[`transpiles Observable JavaScript import-withs 3`] = `
{
  "autodisplay": false,
  "body": "async (__variable) => {
const {color} = await (import("https://api.observablehq.com/d/2d6bf7be248d66f3.js?v=4&resolutions=0000000000000000@0").then((_) => {
  const module = __variable._module._runtime.module(_.default).derive([{name: "foo", alias: "bar"}], __variable._module);
  const outputs = new Map(Array.from(__variable._outputs, (v) => [v._name, v]));
  outputs.get("color")?.import("color", module);
  return {};
}));

return {color};
}",
  "databases": Set {},
  "files": Set {},
  "inputs": [
    "@variable",
  ],
  "output": undefined,
  "outputs": [
    "color",
  ],
  "secrets": Set {},
}
`;

exports[`transpiles Observable JavaScript import-withs 4`] = `
{
  "autodisplay": false,
  "body": "async (__variable) => {
const {color: red} = await (import("https://api.observablehq.com/d/2d6bf7be248d66f3.js?v=4&resolutions=0000000000000000@0").then((_) => {
  const module = __variable._module._runtime.module(_.default).derive(["foo"], __variable._module);
  const outputs = new Map(Array.from(__variable._outputs, (v) => [v._name, v]));
  outputs.get("red")?.import("color", "red", module);
  return {};
}));

return {red};
}",
  "databases": Set {},
  "files": Set {},
  "inputs": [
    "@variable",
  ],
  "output": undefined,
  "outputs": [
    "red",
  ],
  "secrets": Set {},
}
`;

exports[`transpiles Observable JavaScript import-withs of views and mutables 1`] = `
{
  "autodisplay": false,
  "body": "async (__variable) => {
const {color, viewof$color} = await (import("https://api.observablehq.com/d/2d6bf7be248d66f3.js?v=4&resolutions=0000000000000000@0").then((_) => {
  const module = __variable._module._runtime.module(_.default).derive([{name: "foo", alias: "bar"}], __variable._module);
  const outputs = new Map(Array.from(__variable._outputs, (v) => [v._name, v]));
  outputs.get("color")?.import("color", module);
  outputs.get("viewof$color")?.import("viewof color", "viewof$color", module);
  return {};
}));

return {color,viewof$color};
}",
  "databases": Set {},
  "files": Set {},
  "inputs": [
    "@variable",
  ],
  "output": undefined,
  "outputs": [
    "color",
    "viewof$color",
  ],
  "secrets": Set {},
}
`;

exports[`transpiles Observable JavaScript import-withs of views and mutables 2`] = `
{
  "autodisplay": false,
  "body": "async (__variable) => {
const {color} = await (import("https://api.observablehq.com/d/2d6bf7be248d66f3.js?v=4&resolutions=0000000000000000@0").then((_) => {
  const module = __variable._module._runtime.module(_.default).derive(["foo", "viewof foo"], __variable._module);
  const outputs = new Map(Array.from(__variable._outputs, (v) => [v._name, v]));
  outputs.get("color")?.import("color", module);
  return {};
}));

return {color};
}",
  "databases": Set {},
  "files": Set {},
  "inputs": [
    "@variable",
  ],
  "output": undefined,
  "outputs": [
    "color",
  ],
  "secrets": Set {},
}
`;

exports[`transpiles Observable JavaScript import-withs of views and mutables 3`] = `
{
  "autodisplay": false,
  "body": "async (__variable) => {
const {color} = await (import("https://api.observablehq.com/d/2d6bf7be248d66f3.js?v=4&resolutions=0000000000000000@0").then((_) => {
  const module = __variable._module._runtime.module(_.default).derive([{name: "foo", alias: "bar"}, {name: "viewof foo", alias: "viewof bar"}], __variable._module);
  const outputs = new Map(Array.from(__variable._outputs, (v) => [v._name, v]));
  outputs.get("color")?.import("color", module);
  return {};
}));

return {color};
}",
  "databases": Set {},
  "files": Set {},
  "inputs": [
    "@variable",
  ],
  "output": undefined,
  "outputs": [
    "color",
  ],
  "secrets": Set {},
}
`;

exports[`transpiles Observable JavaScript import-withs of views and mutables 4`] = `
{
  "autodisplay": false,
  "body": "async (__variable) => {
const {color} = await (import("https://api.observablehq.com/d/2d6bf7be248d66f3.js?v=4&resolutions=0000000000000000@0").then((_) => {
  const module = __variable._module._runtime.module(_.default).derive(["foo", "mutable foo"], __variable._module);
  const outputs = new Map(Array.from(__variable._outputs, (v) => [v._name, v]));
  outputs.get("color")?.import("color", module);
  return {};
}));

return {color};
}",
  "databases": Set {},
  "files": Set {},
  "inputs": [
    "@variable",
  ],
  "output": undefined,
  "outputs": [
    "color",
  ],
  "secrets": Set {},
}
`;

exports[`transpiles Observable JavaScript import-withs of views and mutables 5`] = `
{
  "autodisplay": false,
  "body": "async (__variable) => {
const {color} = await (import("https://api.observablehq.com/d/2d6bf7be248d66f3.js?v=4&resolutions=0000000000000000@0").then((_) => {
  const module = __variable._module._runtime.module(_.default).derive([{name: "foo", alias: "bar"}, {name: "mutable foo", alias: "mutable bar"}], __variable._module);
  const outputs = new Map(Array.from(__variable._outputs, (v) => [v._name, v]));
  outputs.get("color")?.import("color", module);
  return {};
}));

return {color};
}",
  "databases": Set {},
  "files": Set {},
  "inputs": [
    "@variable",
  ],
  "output": undefined,
  "outputs": [
    "color",
  ],
  "secrets": Set {},
}
`;

exports[`transpiles Observable JavaScript import-withs of views and mutables 6`] = `
{
  "autodisplay": false,
  "body": "async (__variable) => {
const {color} = await (import("https://api.observablehq.com/d/2d6bf7be248d66f3.js?v=4&resolutions=0000000000000000@0").then((_) => {
  const module = __variable._module._runtime.module(_.default).derive(["foo", "bar", "viewof bar", {name: "baz", alias: "qux"}, {name: "mutable baz", alias: "mutable qux"}], __variable._module);
  const outputs = new Map(Array.from(__variable._outputs, (v) => [v._name, v]));
  outputs.get("color")?.import("color", module);
  return {};
}));

return {color};
}",
  "databases": Set {},
  "files": Set {},
  "inputs": [
    "@variable",
  ],
  "output": undefined,
  "outputs": [
    "color",
  ],
  "secrets": Set {},
}
`;

exports[`transpiles Observable JavaScript imports 1`] = `
{
  "autodisplay": false,
  "body": "async (__variable) => {
const {color} = await (import("https://api.observablehq.com/d/2d6bf7be248d66f3.js?v=4&resolutions=0000000000000000@0").then((_) => {
  const module = __variable._module._runtime.module(_.default);
  const outputs = new Map(Array.from(__variable._outputs, (v) => [v._name, v]));
  outputs.get("color")?.import("color", module);
  return {};
}));

return {color};
}",
  "databases": Set {},
  "files": Set {},
  "inputs": [
    "@variable",
  ],
  "output": undefined,
  "outputs": [
    "color",
  ],
  "secrets": Set {},
}
`;

exports[`transpiles Observable JavaScript imports 2`] = `
{
  "autodisplay": false,
  "body": "async (__variable) => {
const {color} = await (import("https://api.observablehq.com/d/2d6bf7be248d66f3@173.js?v=4&resolutions=0000000000000000@0").then((_) => {
  const module = __variable._module._runtime.module(_.default);
  const outputs = new Map(Array.from(__variable._outputs, (v) => [v._name, v]));
  outputs.get("color")?.import("color", module);
  return {};
}));

return {color};
}",
  "databases": Set {},
  "files": Set {},
  "inputs": [
    "@variable",
  ],
  "output": undefined,
  "outputs": [
    "color",
  ],
  "secrets": Set {},
}
`;

exports[`transpiles Observable JavaScript imports of mutables 1`] = `
{
  "autodisplay": false,
  "body": "async (__variable) => {
const {foo, mutable$foo} = await (import("https://api.observablehq.com/d/2d6bf7be248d66f3.js?v=4&resolutions=0000000000000000@0").then((_) => {
  const module = __variable._module._runtime.module(_.default);
  const outputs = new Map(Array.from(__variable._outputs, (v) => [v._name, v]));
  outputs.get("foo")?.import("foo", module);
  outputs.get("mutable$foo")?.import("mutable foo", "mutable$foo", module);
  return {};
}));

return {foo,mutable$foo};
}",
  "databases": Set {},
  "files": Set {},
  "inputs": [
    "@variable",
  ],
  "output": undefined,
  "outputs": [
    "foo",
    "mutable$foo",
  ],
  "secrets": Set {},
}
`;

exports[`transpiles Observable JavaScript imports of mutables 2`] = `
{
  "autodisplay": false,
  "body": "async (__variable) => {
const {foo: bar, mutable$foo: mutable$bar} = await (import("https://api.observablehq.com/d/2d6bf7be248d66f3.js?v=4&resolutions=0000000000000000@0").then((_) => {
  const module = __variable._module._runtime.module(_.default);
  const outputs = new Map(Array.from(__variable._outputs, (v) => [v._name, v]));
  outputs.get("bar")?.import("foo", "bar", module);
  outputs.get("mutable$bar")?.import("mutable foo", "mutable$bar", module);
  return {};
}));

return {bar,mutable$bar};
}",
  "databases": Set {},
  "files": Set {},
  "inputs": [
    "@variable",
  ],
  "output": undefined,
  "outputs": [
    "bar",
    "mutable$bar",
  ],
  "secrets": Set {},
}
`;

exports[`transpiles Observable JavaScript imports of views 1`] = `
{
  "autodisplay": false,
  "body": "async (__variable) => {
const {figure, rotation, viewof$rotation} = await (import("https://api.observablehq.com/@rreusser/drawing-3d-objects-with-svg.js?v=4&resolutions=0000000000000000@0").then((_) => {
  const module = __variable._module._runtime.module(_.default);
  const outputs = new Map(Array.from(__variable._outputs, (v) => [v._name, v]));
  outputs.get("figure")?.import("figure", module);
  outputs.get("rotation")?.import("rotation", module);
  outputs.get("viewof$rotation")?.import("viewof rotation", "viewof$rotation", module);
  return {};
}));

return {figure,rotation,viewof$rotation};
}",
  "databases": Set {},
  "files": Set {},
  "inputs": [
    "@variable",
  ],
  "output": undefined,
  "outputs": [
    "figure",
    "rotation",
    "viewof$rotation",
  ],
  "secrets": Set {},
}
`;

exports[`transpiles Observable JavaScript imports of views 2`] = `
{
  "autodisplay": false,
  "body": "async (__variable) => {
const {figure, rotation: rot, viewof$rotation: viewof$rot} = await (import("https://api.observablehq.com/@rreusser/drawing-3d-objects-with-svg.js?v=4&resolutions=0000000000000000@0").then((_) => {
  const module = __variable._module._runtime.module(_.default);
  const outputs = new Map(Array.from(__variable._outputs, (v) => [v._name, v]));
  outputs.get("figure")?.import("figure", module);
  outputs.get("rot")?.import("rotation", "rot", module);
  outputs.get("viewof$rot")?.import("viewof rotation", "viewof$rot", module);
  return {};
}));

return {figure,rot,viewof$rot};
}",
  "databases": Set {},
  "files": Set {},
  "inputs": [
    "@variable",
  ],
  "output": undefined,
  "outputs": [
    "figure",
    "rot",
    "viewof$rot",
  ],
  "secrets": Set {},
}
`;

exports[`transpiles dynamic npm: imports 1`] = `
{
  "autodisplay": false,
  "body": "async () => {
const d3 = await import("https://cdn.jsdelivr.net/npm/d3/+esm");
return {d3};
}",
  "databases": Set {},
  "files": Set {},
  "inputs": [],
  "output": undefined,
  "outputs": [
    "d3",
  ],
  "secrets": Set {},
}
`;

exports[`transpiles empty cells 1`] = `
{
  "autodisplay": false,
  "body": "() => {

}",
  "databases": Set {},
  "files": Set {},
  "inputs": [],
  "output": undefined,
  "outputs": [],
  "secrets": Set {},
}
`;

exports[`transpiles empty cells 2`] = `
{
  "autodisplay": false,
  "autoview": false,
  "body": "() => {

}",
  "databases": Set {},
  "files": Set {},
  "inputs": [],
  "output": undefined,
  "outputs": [],
  "secrets": Set {},
}
`;

exports[`transpiles empty cells 3`] = `
{
  "autodisplay": false,
  "autoview": false,
  "body": "() => {

}",
  "databases": Set {},
  "files": Set {},
  "inputs": [],
  "output": undefined,
  "outputs": [],
  "secrets": Set {},
}
`;

exports[`transpiles empty cells 4`] = `
{
  "autodisplay": false,
  "autoview": false,
  "body": "() => {

}",
  "databases": Set {},
  "files": Set {},
  "inputs": [],
  "output": undefined,
  "outputs": [],
  "secrets": Set {},
}
`;

exports[`transpiles empty cells 5`] = `
{
  "autodisplay": false,
  "autoview": false,
  "body": "() => {

}",
  "databases": Set {},
  "files": Set {},
  "inputs": [],
  "output": undefined,
  "outputs": [],
  "secrets": Set {},
}
`;

exports[`transpiles import.meta.resolve 1`] = `
{
  "autodisplay": true,
  "body": "() => {
return (
"https://cdn.jsdelivr.net/npm/d3/+esm"
)
}",
  "databases": Set {},
  "files": Set {},
  "inputs": [],
  "output": undefined,
  "outputs": [],
  "secrets": Set {},
}
`;

exports[`transpiles import.meta.resolve 2`] = `
{
  "autodisplay": true,
  "body": "() => {
return (
new URL("./test", document.baseURI).href
)
}",
  "databases": Set {},
  "files": Set {},
  "inputs": [],
  "output": undefined,
  "outputs": [],
  "secrets": Set {},
}
`;

exports[`transpiles import.meta.resolve 3`] = `
{
  "autodisplay": true,
  "body": "() => {
return (
"./test"
)
}",
  "databases": Set {},
  "files": Set {},
  "inputs": [],
  "output": undefined,
  "outputs": [],
  "secrets": Set {},
}
`;

exports[`transpiles node cells 1`] = `
{
  "autodisplay": true,
  "autoview": false,
  "body": "(Interpreter) => {
return (
Interpreter("node", {id: -1, format: "buffer"}).run(\`process.stdout.write(\\\`Node $\\{process.version}\\\`);\`).then((file) => file.arrayBuffer())
)
}",
  "databases": Set {},
  "files": Set {},
  "inputs": [
    "Interpreter",
  ],
  "output": undefined,
  "outputs": [],
  "secrets": Set {},
}
`;

exports[`transpiles node cells 2`] = `
{
  "autodisplay": true,
  "autoview": false,
  "body": "(Interpreter) => {
return (
Interpreter("node", {id: -1, format: "buffer"}).run(\`process.stdout.write(\\\`Node \\\\$\\{process.version}\\\`);\`).then((file) => file.arrayBuffer())
)
}",
  "databases": Set {},
  "files": Set {},
  "inputs": [
    "Interpreter",
  ],
  "output": undefined,
  "outputs": [],
  "secrets": Set {},
}
`;

exports[`transpiles node cells 3`] = `
{
  "autodisplay": true,
  "autoview": false,
  "body": "(Interpreter) => {
return (
Interpreter("node", {id: -1, format: "buffer"}).run(\`process.stdout.write(\\\`Node \\\\\\\\$\\{process.version}\\\`);\`).then((file) => file.arrayBuffer())
)
}",
  "databases": Set {},
  "files": Set {},
  "inputs": [
    "Interpreter",
  ],
  "output": undefined,
  "outputs": [],
  "secrets": Set {},
}
`;

exports[`transpiles node cells 4`] = `
{
  "autodisplay": true,
  "autoview": false,
  "body": "(Interpreter) => {
return (
Interpreter("node", {id: -1, format: "buffer"}).run(\`process.stdout.write(\\\`Node $\\\\{process.version}\\\`);\`).then((file) => file.arrayBuffer())
)
}",
  "databases": Set {},
  "files": Set {},
  "inputs": [
    "Interpreter",
  ],
  "output": undefined,
  "outputs": [],
  "secrets": Set {},
}
`;

exports[`transpiles node cells 5`] = `
{
  "autodisplay": true,
  "autoview": false,
  "body": "(Interpreter) => {
return (
Interpreter("node", {id: -1, format: "buffer"}).run(\`process.stdout.write(\\\`Node \\\\$\\\\{process.version}\\\`);\`).then((file) => file.arrayBuffer())
)
}",
  "databases": Set {},
  "files": Set {},
  "inputs": [
    "Interpreter",
  ],
  "output": undefined,
  "outputs": [],
  "secrets": Set {},
}
`;

exports[`transpiles static imports with {type: 'observable'} 1`] = `
{
  "autodisplay": false,
  "body": "async (__variable) => {
const {color} = await (import("https://api.observablehq.com/d/2d6bf7be248d66f3.js?v=4&resolutions=0000000000000000@0").then((_) => {
  const module = __variable._module._runtime.module(_.default);
  const outputs = new Map(Array.from(__variable._outputs, (v) => [v._name, v]));
  outputs.get("color")?.import("color", module);
  return {};
}));

return {color};
}",
  "databases": Set {},
  "files": Set {},
  "inputs": [
    "@variable",
  ],
  "output": undefined,
  "outputs": [
    "color",
  ],
  "secrets": Set {},
}
`;

exports[`transpiles static imports with {type: 'observable'} 2`] = `
{
  "autodisplay": false,
  "body": "async (__variable) => {
const {color} = await (import("https://api.observablehq.com/d/2d6bf7be248d66f3@173.js?v=4&resolutions=0000000000000000@0").then((_) => {
  const module = __variable._module._runtime.module(_.default);
  const outputs = new Map(Array.from(__variable._outputs, (v) => [v._name, v]));
  outputs.get("color")?.import("color", module);
  return {};
}));

return {color};
}",
  "databases": Set {},
  "files": Set {},
  "inputs": [
    "@variable",
  ],
  "output": undefined,
  "outputs": [
    "color",
  ],
  "secrets": Set {},
}
`;

exports[`transpiles static imports with {type: 'observable'} 3`] = `
{
  "autodisplay": false,
  "body": "async (__variable) => {
const {Scrubber} = await (import("https://api.observablehq.com/@mbostock/scrubber.js?v=4&resolutions=0000000000000000@0").then((_) => {
  const module = __variable._module._runtime.module(_.default);
  const outputs = new Map(Array.from(__variable._outputs, (v) => [v._name, v]));
  outputs.get("Scrubber")?.import("Scrubber", module);
  return {};
}));

return {Scrubber};
}",
  "databases": Set {},
  "files": Set {},
  "inputs": [
    "@variable",
  ],
  "output": undefined,
  "outputs": [
    "Scrubber",
  ],
  "secrets": Set {},
}
`;

exports[`transpiles static imports with {type: 'observable'} 4`] = `
{
  "autodisplay": false,
  "body": "async (__variable) => {
const {Scrubber} = await (import("https://api.observablehq.com/@mbostock/scrubber@255.js?v=4&resolutions=0000000000000000@0").then((_) => {
  const module = __variable._module._runtime.module(_.default);
  const outputs = new Map(Array.from(__variable._outputs, (v) => [v._name, v]));
  outputs.get("Scrubber")?.import("Scrubber", module);
  return {};
}));

return {Scrubber};
}",
  "databases": Set {},
  "files": Set {},
  "inputs": [
    "@variable",
  ],
  "output": undefined,
  "outputs": [
    "Scrubber",
  ],
  "secrets": Set {},
}
`;

exports[`transpiles static imports with {type: 'observable'} 5`] = `
{
  "autodisplay": false,
  "body": "async (__variable) => {
const {viewof$rotation} = await (import("https://api.observablehq.com/@rreusser/drawing-3d-objects-with-svg.js?v=4&resolutions=0000000000000000@0").then((_) => {
  const module = __variable._module._runtime.module(_.default);
  const outputs = new Map(Array.from(__variable._outputs, (v) => [v._name, v]));
  outputs.get("viewof$rotation")?.import("viewof rotation", "viewof$rotation", module);
  return {};
}));

return {viewof$rotation};
}",
  "databases": Set {},
  "files": Set {},
  "inputs": [
    "@variable",
  ],
  "output": undefined,
  "outputs": [
    "viewof$rotation",
  ],
  "secrets": Set {},
}
`;

exports[`transpiles static npm: imports 1`] = `
{
  "autodisplay": false,
  "body": "async () => {
const d3 = await import("https://cdn.jsdelivr.net/npm/d3/+esm");

return {d3};
}",
  "databases": Set {},
  "files": Set {},
  "inputs": [],
  "output": undefined,
  "outputs": [
    "d3",
  ],
  "secrets": Set {},
}
`;

exports[`transpiles static npm: imports 2`] = `
{
  "autodisplay": false,
  "body": "async () => {
const {default: _} = await import("https://cdn.jsdelivr.net/npm/lodash/+esm").then((module) => {
  if (!("default" in module)) throw new SyntaxError(\`export 'default' not found\`);
  return module;
});

return {_};
}",
  "databases": Set {},
  "files": Set {},
  "inputs": [],
  "output": undefined,
  "outputs": [
    "_",
  ],
  "secrets": Set {},
}
`;

exports[`transpiles static npm: imports 3`] = `
{
  "autodisplay": false,
  "body": "async () => {
const [{}, {}] = await Promise.all([import("https://cdn.jsdelivr.net/npm/d3/+esm"), import("https://cdn.jsdelivr.net/npm/isoformat/+esm")]);

}",
  "databases": Set {},
  "files": Set {},
  "inputs": [],
  "output": undefined,
  "outputs": [],
  "secrets": Set {},
}
`;

exports[`transpiles static observable: imports 1`] = `
{
  "autodisplay": false,
  "body": "async (__variable) => {
const {color} = await (import("https://api.observablehq.com/d/2d6bf7be248d66f3.js?v=4&resolutions=0000000000000000@0").then((_) => {
  const module = __variable._module._runtime.module(_.default);
  const outputs = new Map(Array.from(__variable._outputs, (v) => [v._name, v]));
  outputs.get("color")?.import("color", module);
  return {};
}));

return {color};
}",
  "databases": Set {},
  "files": Set {},
  "inputs": [
    "@variable",
  ],
  "output": undefined,
  "outputs": [
    "color",
  ],
  "secrets": Set {},
}
`;

exports[`transpiles static observable: imports 2`] = `
{
  "autodisplay": false,
  "body": "async (__variable) => {
const {color} = await (import("https://api.observablehq.com/d/2d6bf7be248d66f3@173.js?v=4&resolutions=0000000000000000@0").then((_) => {
  const module = __variable._module._runtime.module(_.default);
  const outputs = new Map(Array.from(__variable._outputs, (v) => [v._name, v]));
  outputs.get("color")?.import("color", module);
  return {};
}));

return {color};
}",
  "databases": Set {},
  "files": Set {},
  "inputs": [
    "@variable",
  ],
  "output": undefined,
  "outputs": [
    "color",
  ],
  "secrets": Set {},
}
`;

exports[`transpiles static observable: imports 3`] = `
{
  "autodisplay": false,
  "body": "async (__variable) => {
const {Scrubber} = await (import("https://api.observablehq.com/@mbostock/scrubber.js?v=4&resolutions=0000000000000000@0").then((_) => {
  const module = __variable._module._runtime.module(_.default);
  const outputs = new Map(Array.from(__variable._outputs, (v) => [v._name, v]));
  outputs.get("Scrubber")?.import("Scrubber", module);
  return {};
}));

return {Scrubber};
}",
  "databases": Set {},
  "files": Set {},
  "inputs": [
    "@variable",
  ],
  "output": undefined,
  "outputs": [
    "Scrubber",
  ],
  "secrets": Set {},
}
`;

exports[`transpiles static observable: imports 4`] = `
{
  "autodisplay": false,
  "body": "async (__variable) => {
const {Scrubber} = await (import("https://api.observablehq.com/@mbostock/scrubber@255.js?v=4&resolutions=0000000000000000@0").then((_) => {
  const module = __variable._module._runtime.module(_.default);
  const outputs = new Map(Array.from(__variable._outputs, (v) => [v._name, v]));
  outputs.get("Scrubber")?.import("Scrubber", module);
  return {};
}));

return {Scrubber};
}",
  "databases": Set {},
  "files": Set {},
  "inputs": [
    "@variable",
  ],
  "output": undefined,
  "outputs": [
    "Scrubber",
  ],
  "secrets": Set {},
}
`;

exports[`transpiles static observable: imports 5`] = `
{
  "autodisplay": false,
  "body": "async (__variable) => {
const {viewof$rotation} = await (import("https://api.observablehq.com/@rreusser/drawing-3d-objects-with-svg.js?v=4&resolutions=0000000000000000@0").then((_) => {
  const module = __variable._module._runtime.module(_.default);
  const outputs = new Map(Array.from(__variable._outputs, (v) => [v._name, v]));
  outputs.get("viewof$rotation")?.import("viewof rotation", "viewof$rotation", module);
  return {};
}));

return {viewof$rotation};
}",
  "databases": Set {},
  "files": Set {},
  "inputs": [
    "@variable",
  ],
  "output": undefined,
  "outputs": [
    "viewof$rotation",
  ],
  "secrets": Set {},
}
`;
